crud operation done using in memory db
