# api/swagger/swagger.yaml
@@ -24,6 +24,7 @@ paths:
     get:
       description: Returns list of registered devices
       # used as the method name of the controller
+      operationId: getdevices
       responses:
         "200":
           description: Success
@@ -76,6 +77,30 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse" 
+    post:
+      description: Save application in the device
+      operationId: saveapp
+      parameters:
+        - name: id
+          description: Device ID
+          type: string
+          in: path
+          required: true
+        - name: title
+          description: Application properties
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Application"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
     put:
       description: Update application in the device
       operationId: updateapp
@@ -108,12 +133,6 @@ paths:
           type: string
           in: path
           required: true
-        - name: title
-          description: Application properties
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/Application"
       responses:
         "200":
           description: Success
@@ -209,3 +228,7 @@ definitions:
         version:
           type: string
           description: Application version
+      required:
+        - id
+        - name
+        - version
